Let auto deploy know where to get the war file from.

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,8 @@
 ---
 applications:
-- name: javaplays-restjava-mobilestarterkit-templatecode
+- name: jp-restjava-mobilestarterkit-templatecode
   memory: 512M
+  instances: 1
   host: sandhya-javaplays-restjava-mobilestarterkit-templatecode
+  path: jpbackendmsktemplate.war
   domain: mybluemix.net
